# TCCPublico

./: .gitignore  README.md
BackEnd/: README.md  pyproject.toml
BackEnd/src/: app.py
BackEnd/src/config/: Exconf.ini  configuration.py
BackEnd/src/data/: database.py
BackEnd/src/domain/DTOs/: arquivosProdutosDTO.py  modelosDTO.py  parametrosTreinamentoDTO.py  tratamentoDadosDTO.py  usuariosDTO.py  variaveisTreinamentoDTO.py
BackEnd/src/domain/entities/: arquivosProdutos.py  modelos.py  parametrosTreinamentos.py  tratamentoDados.py  usuarios.py  variaveisTreinamentos.py
BackEnd/src/domain/enum/: tipoDado.py  tipoFiltro.py  tipoInsercaoDado.py  tipoOperacao.py
BackEnd/src/domain/error/: ErroEntidade.py
BackEnd/src/domain/treatments/: ErroEntidade.py  MensagemTratamento.py
BackEnd/src/repositories/: arquivosProdutosRepository.py  modelosRepository.py  parametrosTreinamentoRepository.py  tratamentoDadosRepository.py  usuariosRepository.py  variaveisTreinamentosRepository.py
